syntax = "proto3";

package user;

option go_package = "jumia-clone-backend/services/user-service/proto";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}

// Register user
message RegisterRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
  string phone = 5;
}

message RegisterResponse {
  string user_id = 1;
  string message = 2;
  bool success = 3;
}

// Login user
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string user_id = 1;
  string token = 2;
  string refresh_token = 3;
  bool success = 4;
  string message = 5;
  UserData user = 6;
}

// Get user details
message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  UserData user = 1;
  bool success = 2;
  string message = 3;
}

// Update user
message UpdateUserRequest {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string phone = 4;
  string address = 5;
}

message UpdateUserResponse {
  bool success = 1;
  string message = 2;
  UserData user = 3;
}

// Delete user
message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// Verify JWT token
message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string message = 3;
}

// User data structure
message UserData {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string address = 6;
  string created_at = 7;
  string updated_at = 8;
}